<resources>
    <string name="app_name">TAM</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>

    <string name="title_crew">Crew</string>
    <string name="title_events">Events</string>
    <string name="title_quizzes">Quizzes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tam_heading">TAM v7.0</string>
    <string name="info">Info</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="results">Results</string>
    <string name="devInfo">Developed By Technical Department, TAM</string>
    <string name="asset_question">How could you be an asset to TAM?</string>
    <string name="dept_quest">Which department do you want to join? Why?</string>
    <string name="unique_quest">How are you unique from others? :v</string>
</resources>
