<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smec.tam.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.smec.tam.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_quizzes"
        android:name="com.smec.tam.ui.quizzes.QuizzesFragment"
        android:label="@string/title_quizzes"
        tools:layout="@layout/fragment_quizzes"/>

    <fragment
        android:id="@+id/navigation_crew"
        android:name="com.smec.tam.ui.crew.CrewFragment"
        android:label="@string/title_crew"
        tools:layout="@layout/fragment_crew" />

</navigation>